--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "cra-template",
-  "version": "1.1.2",
+  "name": "cra-template-supabase",
+  "version": "1.0.0",
   "keywords": [
     "react",
     "create-react-app",
     "template"
   ],
-  "description": "The base template for Create React App.",
+  "description": "The base Supabase template for Create React App.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/facebook/create-react-app.git",
-    "directory": "packages/cra-template"
+    "url": "https://github.com/bastiencodes/cra-template-supabase.git"
   },
   "license": "MIT",
   "engines": {
     "node": ">=14"
   },
   "bugs": {
-    "url": "https://github.com/facebook/create-react-app/issues"
+    "url": "https://github.com/bastiencodes/cra-template-supabase/issues"
   },
   "files": [
     "template",
